--- a/pytorch transformer for machine translation.ipynb
+++ b/pytorch transformer for machine translation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78d4d79c",
+   "id": "174df6d3",
    "metadata": {},
    "source": [
     "Reference: https://www.youtube.com/watch?v=M6adRGJe5cQ"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "82123c2f",
+   "id": "fa29aa0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b47813b6",
+   "id": "c7401fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "41077598",
+   "id": "7ade5b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd8bec9e",
+   "id": "4a5b73ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "246627a7",
+   "id": "78142e88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34e65163",
+   "id": "8d002aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "995e0ba9",
+   "id": "8abeaefd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e356a3cd",
+   "id": "70f9f3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "90fae8e1",
+   "id": "30423656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13690b8d",
+   "id": "72a4b503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0b320960",
+   "id": "bd7711a7",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fccb034f",
+   "id": "423a9ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "93c9d46e",
+   "id": "7b626e38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dbc2bb96",
+   "id": "9aeb39eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6510cdf1",
+   "id": "a9cbade1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,8 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b7a1a68",
+   "execution_count": 16,
+   "id": "6bbc86df",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,24 @@
       "[Epoch 0 / 5]\n",
       "=> Saving checkpoint\n",
       "Translated example sentence: \n",
-      " ['cellphone', 'harmonica', 'dog', 'harmonica', 'steeplechase', 'painting', 'belts', 'belts', 'painting', 'squash', 'driveway', 'harmonica', 'aiming', 'jogs', 'countryside', 'belts', 'painting', 'painting', 'painting', 'belts', 'kitten', 'countryside', 'pain', 'against', 'kitten', 'painting', 'harmonica', 'painting', 'countryside', 'tape', 'golfer', 'kitten', 'kitten', 'steeplechase', 'kitten', 'kitten', 'countryside', 'transporting', 'steeplechase', 'kitten', 'countryside', 'pain', 'transporting', 'ford', 'kitten', 'harmonica', 'steeplechase', 'glacier', 'golfer', 'golfer']\n"
+      " ['cellphone', 'harmonica', 'dog', 'harmonica', 'steeplechase', 'painting', 'belts', 'belts', 'painting', 'squash', 'driveway', 'harmonica', 'aiming', 'jogs', 'countryside', 'belts', 'painting', 'painting', 'painting', 'belts', 'kitten', 'countryside', 'pain', 'against', 'kitten', 'painting', 'harmonica', 'painting', 'countryside', 'tape', 'golfer', 'kitten', 'kitten', 'steeplechase', 'kitten', 'kitten', 'countryside', 'transporting', 'steeplechase', 'kitten', 'countryside', 'pain', 'transporting', 'ford', 'kitten', 'harmonica', 'steeplechase', 'glacier', 'golfer', 'golfer']\n",
+      "[Epoch 1 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'young', 'boy', 'is', 'walking', 'a', 'street', 'to', 'a', 'street', '.', '<eos>']\n",
+      "[Epoch 2 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'couple', 'walking', 'to', 'a', 'large', 'street', 'to', 'a', 'large', 'street', '.', '<eos>']\n",
+      "[Epoch 3 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'large', 'couple', 'walking', 'next', 'to', 'a', 'large', 'wall', '.', '<eos>']\n",
+      "[Epoch 4 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'couple', 'walking', 'down', 'a', 'sidewalk', 'next', 'to', 'a', 'sidewalk', '.', '<eos>']\n",
+      "Bleu score 17.36\n"
      ]
     }
    ],
@@ -397,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116eeca2",
+   "id": "13cd0366",
    "metadata": {},
    "source": [
     "### Sample translation"
@@ -405,8 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d7c0697",
+   "execution_count": 17,
+   "id": "01260498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,10 +435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc2e5993",
+   "execution_count": 20,
+   "id": "c76afac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a boat with a <unk> of people are being <unk> by a table .\n"
+     ]
+    }
+   ],
    "source": [
     "spacy_ger = spacy.load(\"de_core_news_sm\")\n",
     "\n",
@@ -456,13 +481,21 @@
     "translated_sentence = [english.vocab.itos[idx] for idx in outputs]\n",
     "# remove start token\n",
     "\n",
-    "print(translated_sentence[1:-1].join(' '))"
+    "print(' '.join(translated_sentence[1:-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf01ae47",
+   "metadata": {},
+   "source": [
+    "**Train the model for more epochs and you will definitely get a model which can give you a blue score of 30 +.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acc0609",
+   "id": "bebe4d17",
    "metadata": {},
    "outputs": [],
    "source": []
