trained the model for more epochs

--- a/pytorch transformer for machine translation.ipynb
+++ b/pytorch transformer for machine translation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "174df6d3",
+   "id": "d47d599d",
    "metadata": {},
    "source": [
     "Reference: https://www.youtube.com/watch?v=M6adRGJe5cQ"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa29aa0c",
+   "id": "f0598829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7401fdd",
+   "id": "c2fccfe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7ade5b71",
+   "id": "f5cb07c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4a5b73ba",
+   "id": "00f26539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "78142e88",
+   "id": "db8bea2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8d002aa8",
+   "id": "9a40312d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8abeaefd",
+   "id": "89c41eaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,20 +167,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70f9f3b4",
+   "id": "6b2227fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the training phase\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "load_model = False\n",
+    "load_model = True\n",
     "save_model = True\n",
     "\n",
     "\n",
     "# Training hyperparameters\n",
     "\n",
-    "num_epochs = 5\n",
+    "num_epochs = 20\n",
     "learning_rate = 3e-5\n",
     "batch_size = 32\n",
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "30423656",
+   "id": "4fb5ac2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72a4b503",
+   "id": "46d68214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bd7711a7",
+   "id": "132c41de",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "423a9ba6",
+   "id": "46b84d9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b626e38",
+   "id": "6f8575c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,20 +289,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9aeb39eb",
+   "execution_count": 15,
+   "id": "5f6e9000",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> Loading checkpoint\n"
+     ]
+    }
+   ],
    "source": [
     "if load_model:\n",
-    "    load_checkpoint(torch.load('mycheckpoint.pth.tar'), model, optimizer)\n",
+    "    load_checkpoint(torch.load('my_checkpoint.pth.tar'), model, optimizer)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a9cbade1",
+   "execution_count": 16,
+   "id": "c4544f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,35 +324,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6bbc86df",
+   "execution_count": 17,
+   "id": "b4fb337f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0 / 5]\n",
-      "=> Saving checkpoint\n",
-      "Translated example sentence: \n",
-      " ['cellphone', 'harmonica', 'dog', 'harmonica', 'steeplechase', 'painting', 'belts', 'belts', 'painting', 'squash', 'driveway', 'harmonica', 'aiming', 'jogs', 'countryside', 'belts', 'painting', 'painting', 'painting', 'belts', 'kitten', 'countryside', 'pain', 'against', 'kitten', 'painting', 'harmonica', 'painting', 'countryside', 'tape', 'golfer', 'kitten', 'kitten', 'steeplechase', 'kitten', 'kitten', 'countryside', 'transporting', 'steeplechase', 'kitten', 'countryside', 'pain', 'transporting', 'ford', 'kitten', 'harmonica', 'steeplechase', 'glacier', 'golfer', 'golfer']\n",
-      "[Epoch 1 / 5]\n",
-      "=> Saving checkpoint\n",
-      "Translated example sentence: \n",
-      " ['a', 'young', 'boy', 'is', 'walking', 'a', 'street', 'to', 'a', 'street', '.', '<eos>']\n",
-      "[Epoch 2 / 5]\n",
-      "=> Saving checkpoint\n",
-      "Translated example sentence: \n",
-      " ['a', 'couple', 'walking', 'to', 'a', 'large', 'street', 'to', 'a', 'large', 'street', '.', '<eos>']\n",
-      "[Epoch 3 / 5]\n",
-      "=> Saving checkpoint\n",
-      "Translated example sentence: \n",
-      " ['a', 'large', 'couple', 'walking', 'next', 'to', 'a', 'large', 'wall', '.', '<eos>']\n",
-      "[Epoch 4 / 5]\n",
+      "[Epoch 0 / 20]\n",
       "=> Saving checkpoint\n",
       "Translated example sentence: \n",
       " ['a', 'couple', 'walking', 'down', 'a', 'sidewalk', 'next', 'to', 'a', 'sidewalk', '.', '<eos>']\n",
-      "Bleu score 17.36\n"
+      "[Epoch 1 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'next', 'to', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 2 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'next', 'to', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 3 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 4 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 5 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 6 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 7 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 8 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 9 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 10 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 11 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 12 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 13 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 14 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 15 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 16 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 17 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 18 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 19 / 20]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "Bleu score 29.26\n"
      ]
     }
    ],
@@ -414,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13cd0366",
+   "id": "26973ef3",
    "metadata": {},
    "source": [
     "### Sample translation"
@@ -422,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "01260498",
+   "execution_count": 18,
+   "id": "4097b1cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,15 +503,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "c76afac5",
+   "execution_count": 19,
+   "id": "7f3d3979",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a boat with a <unk> of people are being <unk> by a table .\n"
+      "a boat with several men is waiting by a <unk> buildings .\n"
      ]
     }
    ],
@@ -486,16 +554,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf01ae47",
+   "id": "c2d2a100",
    "metadata": {},
    "source": [
-    "**Train the model for more epochs and you will definitely get a model which can give you a blue score of 30 +.**"
+    "**Train the model for more epochs and you will definitely get a model which can give you a BLEU score of 30 +.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bebe4d17",
+   "id": "57da4989",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df3f0de4",
    "metadata": {},
    "outputs": [],
    "source": []
